# omp-breakfast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.breakfast  Dockerfile.postgres  LICENSE  MIGRATION_FIX_SUMMARY.md  Makefile  NEW-UI-COMPONENTS.md  README.md  database.sql  database_seed.sql  docker-compose.test.yml  docker-compose.yml  init_dev_db.sh
.claude/: assessment-findings.md  resolved-findings.md  settings.json
.claude/commands/: api-completeness.md  cross-ref-check.md  db-review.md  dependency-check.md  openapi-sync.md  practices-audit.md  rbac-rules.md  resume-assessment.md  review.md  security-audit.md  test-gaps.md
.github/agents/: backend.agent.md  database.agent.md  design-system.agent.md  frontend.agent.md  orchestrator.agent.md  security.agent.md  testing.agent.md
.github/workflows/: rust-ci.yml
config/: default.yml  development.yml  docker-base.yml  production.yml
frontend/: Cargo.toml  Trunk.toml  bundle-css.sh  index.html  webdriver.json
frontend/src/: api.rs  app.rs  main.rs
frontend/src/components/: card.rs  icons.rs  mod.rs  modal.rs  sidebar.rs  theme_toggle.rs  toast.rs
frontend/src/pages/: admin.rs  dashboard.rs  items.rs  loading.rs  login.rs  mod.rs  order_components.rs  orders.rs  profile.rs  roles.rs  teams.rs
frontend/style/: main.css
frontend/style/connect/: components.css  tokens.css
frontend/tests/: ui_admin_dialogs.rs  ui_helpers.rs  ui_jwt.rs  ui_login.rs  ui_pages.rs  ui_session.rs  ui_table_styling.rs  ui_tests.rs  ui_theme.rs
migrations/: V10__guard_teamorders_team_id.sql  V11__text_column_check_constraints.sql  V12__cleanup_index_and_constraints.sql  V13__pickup_user.sql  V14__user_text_check_constraints.sql  V15__restrict_cascade_fks.sql  V16__constraint_fixes.sql  V17__avatar_text_constraints.sql  V18__password_hash_check.sql  V19__email_varchar_254.sql  V1__initial_schema.sql  V20__case_insensitive_email.sql  V21__orders_amt_upper_bound.sql  V2__uuid_v7_defaults.sql  V3__indexes_constraints.sql  V4__schema_hardening.sql  V5__trigger_and_notnull_fixes.sql  V6__order_constraint_and_index.sql  V7__drop_redundant_indexes.sql  V8__avatars.sql  V9__avatar_index_and_revoked_not_null.sql
src/: config.rs  db.rs  errors.rs  from_row.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  validate.rs
src/db/: avatars.rs  health.rs  items.rs  membership.rs  migrate.rs  mod.rs  order_items.rs  orders.rs  roles.rs  teams.rs  tokens.rs  users.rs
src/handlers/: avatars.rs  items.rs  mod.rs  orders.rs  roles.rs  teams.rs  users.rs
src/middleware/: auth.rs  openapi.rs
tests/: api_auth.rs  api_avatars.rs  api_items.rs  api_misc.rs  api_orders.rs  api_roles.rs  api_teams.rs  api_tests.rs  api_users.rs  db_avatars.rs  db_health.rs  db_items.rs  db_membership.rs  db_orders.rs  db_roles.rs  db_teams.rs  db_tests.rs  db_tokens.rs  db_users.rs
tests/common/: db.rs  mod.rs
