[package]
name = "breakfast"
version = "0.9.3"
authors = ["Ralph Zitz <Ralph.Zitz@LEGO.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/LEGO/omp-breakfast"
keywords = ["fabulab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
actix-web = { version = "4.13.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.2"
actix-governor = "0.10"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["serde", "v7"] }
thiserror = "2.0.18"
config = "0.15.19"

deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio = { version = "1.50.0", default-features = false, features = ["rt"] }
tokio-postgres-rustls = "0.13.0"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
git-version = "0.3.9"
color-eyre = "0.6.5"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry", "json"] }
tracing-appender = "0.2.4"
tracing-actix-web = { version = "0.7.21", features = ["uuid_v7"] }
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"], optional = true }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "rt-tokio-current-thread"], optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }
jwt-compact = "0.8.0"
webpki-roots = "1.0.6"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "logging", "std"] }
rustls-pki-types = "1.14.0"
actix-files = "0.6"
rust_decimal = { version = "1.40.0", features = ["db-tokio-postgres", "serde-with-str"] }
actix-cors = "0.7"
refinery = { version = "0.9", features = ["tokio-postgres"] }
siphasher = "1.0"

[features]
default = ["telemetry"]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-stdout",
    "dep:tracing-opentelemetry",
    "tracing-actix-web/opentelemetry_0_31",
]

[dev-dependencies]
base64 = "0.22"
actix-http = "3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
