[package]
name = "breakfast-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlInputElement", "SubmitEvent"] }
base64 = "0.22"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node"] }
