[package]
name = "breakfast-frontend"
version = "0.8.1"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlInputElement", "HtmlSelectElement", "MediaQueryList", "Storage", "SubmitEvent", "Window"] }
base64 = "0.22"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node"] }
